fix spacing

--- a/style.css
+++ b/style.css
@@ -14,17 +14,17 @@ body {
 }
 
 .main {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 3rem;
 }
 /* settings */
 .settings {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  margin-left: 2rem;
+  margin-inline: 2rem;
   width: 20vw;
 }
 input[type="color"] {
@@ -62,6 +62,7 @@ button {
   border-color: #c0b6ff;
   box-shadow: 3px 3px 10px #9383f7;
   transition: 0.2s ease-in-out;
+  background-color: transparent;
 }
 
 button:hover {
@@ -71,10 +72,6 @@ button:hover {
 .activeBtn {
   background-color: #c0b6ff;
   color: #faf7fb;
-}
-
-.inactiveBtn {
-  background-color: transparent;
 }
 
 .sizeValue {
@@ -114,10 +111,9 @@ input[type="range"]::-webkit-slider-thumb:hover {
 }
 
 .canvas-grid {
-    display: grid;
-    width: 600px;
-    height: 600px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-
+  display: grid;
+  width: 600px;
+  height: 600px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
